<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="iniData"
            type="com.example.capstoneproject.model.DataItem" />


    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        android:orientation="vertical"
        android:layout_marginHorizontal="8dp"
        tools:context=".DetailActivity">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:imageUrl="@{iniData.img}"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="15dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@{iniData.nama}"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold|normal" />

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/gejala"
                android:layout_marginTop="10sp"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/gejala"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:layout_gravity="start"
                android:layout_marginHorizontal="8dp"
                android:text="@{iniData.gejala}"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="107dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/penyebab"
                android:layout_marginTop="10sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/penyebab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:layout_gravity="start"
                android:layout_marginHorizontal="8dp"
                android:text="@{iniData.penyebab}"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="9dp"
                tools:layout_editor_absoluteY="392dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/obat"
                android:textColor="@color/black"
                android:layout_marginTop="10sp"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/obat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:layout_gravity="start"
                android:layout_marginHorizontal="8dp"
                android:text="@{iniData.obat}"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="9dp"
                tools:layout_editor_absoluteY="392dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cegah"
                android:textColor="@color/black"
                android:layout_marginTop="10sp"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/cegah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:layout_gravity="start"
                android:layout_marginHorizontal="8dp"
                android:layout_marginBottom="20sp"
                android:text="@{iniData.cegah}"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>